2016-06-24
    Исправил джойстик, теперь его можно отключать в любое время динамически, например если фокус ввода в поле для ввода на страничке юзера (редактор, чат). Отключается так game.enableJoystick = true/false
    Сделал чтобы количество цветов-спрайтов было больше, чем 34, сейчас их ~ 34 + 21
    Релизовал возможность прорисовывать туман войны, для этого надо создать спрайт с именем FOG и добавить его в Elements игры
    Добавил воспомагательный класс lengthToXY.Map для быстрого оперирования текстовыми картами
2016-06-25
    Реализовал возможность через пропертис файл подменять что будет отображаться на главной страничке. Удобно если надо вставить свой лендинг.
    Исправио ошибку с GuiPlotColorDecoder - тест врешился
2016-06-27
    Зарелизил версию 1.0.1
    Выделил в codenjoy.properties файл флаг отвечающий за верификацию имейла (отправка письмо подтверждения)
    Реализовал возможность сторить об юзере дополнительную информацию в момент регистрации
2016-07-03
    Опубликовал проект под GNU GPL v3. Мейвен автоматически прописывает шапки во всех новых файлах.
    Вынес в properties настройки отправки email
    Вынес в properties настройки donate кошелька
    Лицензия добавляется во все места, где встречаются исходники: джарники игор, енджина, варник коденжоя, клиентские сырцы
2016-07-05
    Исправил мелкие ошибки в тестах и скриптах
    Обновил все зависимости до максимально возможных последний версий либ, повыделял все версии в пропертис
2016-07-11
    Релизовал возможность прорисовывать подложку под спрайтами, для этого надо создать спрайт с именем BACKGROUND и добавить его в Elements игры