@@ -20,7 +20,8 @@
 # #L%
 ###
 autoSaverEnable=true
-mainPage=
+page.main=
+page.registration=
 email.verification=true
 email.password=UT4%-c0=gX=$
 email.name=info@codenjoy.com
