@@ -20,3 +20,4 @@
     Обновил все зависимости до максимально возможных последний версий либ, повыделял все версии в пропертис
 2016-07-11
     Релизовал возможность прорисовывать подложку под спрайтами, для этого надо создать спрайт с именем BACKGROUND и добавить его в Elements игры
+    Выделил в codenjoy.properties путь к форме регистрации
